[package]
name = "sato"
version = "0.1.6"
edition = "2021"
description = "some sort of s-expr based html templating system"
repository = "https://github.com/jakeprobst/sato"
license = "WTFPL"
categories = ["template-engine", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sexp = "1.1.4"
thiserror = "1.0.32"